--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,16 @@
     ],
     "require": {
         "php": ">=5.3.2",
+        "phpcollection/phpcollection": "~0.4",
         "symfony/console": "~2.1",
-        "symfony/dependency-injection": "~2.1"
+        "symfony/dependency-injection": "~2.1",
+        "symfony/config": "~2.1"
     },
     "require-dev": {
         "phpspec/phpspec": "~2.0"
     },
     "autoload": {
-        "psr-0": { "Cypress\\DiDebuggerBundle": "" }
+        "psr-0": { "Cypress\\DiDebuggerBundle": "src" }
     },
     "target-dir": "Cypress/DiDebuggerBundle",
     "extra": {
