checks for arguments count and unused parameters

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,10 @@
         "phpspec/phpspec": "~2.0"
     },
     "autoload": {
-        "psr-0": { "Cypress\\DiDebuggerBundle": "src" }
+        "psr-0": {
+            "Cypress\\DiDebuggerBundle": "src",
+            "spec": ""
+        }
     },
     "target-dir": "Cypress/DiDebuggerBundle",
     "extra": {
