removed phpunit, removed ExistenceChecker, behat features

--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,7 @@
         "symfony/console": "~2.1",
         "symfony/dependency-injection": "~2.1",
         "symfony/config": "~2.1",
-        "symfony/framework-bundle": "~2.1",
-        "phpunit/phpunit": "~4.2",
-        "mockery/mockery": "@stable"
+        "symfony/framework-bundle": "~2.1"
     },
     "require-dev": {
         "phpspec/phpspec": "~2.0",
@@ -28,7 +26,6 @@
         "psr-0": {
             "Cypress\\DiDebuggerBundle": "",
             "Spec": "",
-            "Test": "",
             "Behat\\Test": "features/services"
         }
     },
